[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Danil Karpenko <limpix31@gmail.com>"]
license = "MIT"
repository = "https://github.com/limpix31/network-protocol.git"
readme = "readme.md"

[workspace.dependencies]
wasm-bindgen         = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys               = { version = "0.3" }

[workspace.lint.rust]
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = "warn"
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
