[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition    = "2021"
authors    = ["Danil Karpenko <limpix31@gmail.com>"]
license    = "MIT"
repository = "https://github.com/limpix31/network-protocol.git"
readme     = "readme.md"

[workspace.dependencies]
tracing              = { version = "0.1" }
wasm-bindgen         = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys               = { version = "0.3" }
serde                = { version = "1", features = ["derive"] }

net_transport        = { path = "crates/transport" }
net_proc_macros      = { path = "crates/proc_macros" }
net_shared           = { path = "crates/shared" }

[workspace.lints.rust]
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = "warn"
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
