[package]
name = "net_cursor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
net_transport            = { workspace = true }
net_shared               = { workspace = true }

tracing                  = { workspace = true }
wasm-bindgen             = { workspace = true }
web-sys                  = { workspace = true }
js-sys                   = { workspace = true }
wasm-bindgen-futures     = { workspace = true }

console_error_panic_hook = { version = "0.1.7" }
async-channel            = { version = "2" }

[lints]
workspace = true
