[package]
name = "hello"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys               = { workspace = true }
lz4_flex             = { version = "0.11" }

[lints]
workspace = true
