[package]
name = "net_proc_macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn         = { version = "2" }
quote       = { version = "1" }
proc-macro2 = { version = "1" }

[lints]
workspace = true
