[package]
name = "net_transport"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
net_shared           = { workspace = true }

tracing              = { workspace = true }
thiserror            = { workspace = true }
wasm-bindgen         = { workspace = true }
web-sys              = { workspace = true }
js-sys               = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lints]
workspace = true
